--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <p>
         I took the Intro to Web Development program in the fall, we focused on HTML, CSS, JavaScript and Bootstrap, I’m excited to learn more languages and create fun things with them.
     </p>
+    <img src="https://user-images.githubusercontent.com/123384146/214874699-d452706d-e21e-4046-9b21-07fc007d98ae.jpeg">
 <h1>
     What is something about you that can only be learned by reading this blog?
 </h1>
@@ -27,6 +28,7 @@
 <p>
     Something about me that could only be learned by reading this blog is that I love to travel. I met my husband at a bus stop in Vienna, Austria, got engaged in Fiji and married in Las Vegas!
 </p>
+<img src="https://user-images.githubusercontent.com/123384146/214874113-1c47d2fe-ec40-41bb-b655-aca49cdad76f.jpeg">
 
 </body>
 </html>
