--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+
 <body>
-    <h1>Was your first week what you expected? Why? Why not?</h1>
+    <h1>Mariola's blog</h1>
+    <h2>Was your first week what you expected? Why? Why not?</h1>
 
     <p>
-        My first week was exactly what I expected it to be, a lot of information at once. A lot of good resources have been provided through slack to assist in understanding the topics at hand better. I've done remote learning and taken meetings through zoom in the past so I kinda knew what to expect.
+        My first week was exactly what I expected it to be, a lot of information at once. A lot of good resources have
+        been provided through slack to assist in understanding the topics at hand better. I've done remote learning and
+        taken meetings through zoom in the past so I kinda knew what to expect.
     </p>
 
-    <h1>
+    <h2>
         What are you excited or eager to learn more about?
-    </h1>
+    </h2>
 
     <p>
-        I took the Intro to Web Development program in the fall, we focused on HTML, CSS, JavaScript and Bootstrap, I’m excited to learn more languages and create fun things with them.
+        I took the Intro to Web Development program in the fall, we focused on HTML, CSS, JavaScript and Bootstrap, I’m
+        excited to learn more languages and create fun things with them.
     </p>
     <img src="https://user-images.githubusercontent.com/123384146/214874699-d452706d-e21e-4046-9b21-07fc007d98ae.jpeg">
-<h1>
-    What is something about you that can only be learned by reading this blog?
-</h1>
+    <h2>
+        What is something about you that can only be learned by reading this blog?
+    </h2>
 
-<p>
-    Something about me that could only be learned by reading this blog is that I love to travel. I met my husband at a bus stop in Vienna, Austria, got engaged in Fiji and married in Las Vegas!
-</p>
-<img src="https://user-images.githubusercontent.com/123384146/214874113-1c47d2fe-ec40-41bb-b655-aca49cdad76f.jpeg">
+    <p>
+        Something about me that could only be learned by reading this blog is that I love to travel. I met my husband at
+        a bus stop in Vienna, Austria, got engaged in Fiji and married in Las Vegas!
+    </p>
+    <img src="https://user-images.githubusercontent.com/123384146/214874113-1c47d2fe-ec40-41bb-b655-aca49cdad76f.jpeg">
 
 </body>
+
 </html>
