--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             taken meetings through zoom in the past so I kinda knew what to expect.
         </p>
 
+        <hr>
+
         <h2>
             What are you excited or eager to learn more about?
         </h2>
@@ -31,8 +33,10 @@
             I’m
             excited to learn more languages and create fun things with them.
         </p>
-        <img
-            src="https://user-images.githubusercontent.com/123384146/214874699-d452706d-e21e-4046-9b21-07fc007d98ae.jpeg">
+        <img src="https://user-images.githubusercontent.com/123384146/214874699-d452706d-e21e-4046-9b21-07fc007d98ae.jpeg">
+        
+        <hr>
+        
         <h2>
             What is something about you that can only be learned by reading this blog?
         </h2>
