--- a/styleguide.html
+++ b/styleguide.html
@@ -34,7 +34,7 @@
                     <br>
                         <div class="col-6 offset-3">
                             <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>
+                            <a href="#" class="card-link">fab fa-instagram fa-lg</a>
                             <br>
                             <br>
                         </div>
