--- a/styleguide.html
+++ b/styleguide.html
@@ -13,43 +13,45 @@
 </head>
 
 <body>
-    <div class='container'>
+    <section style="background-color: #032838;">-
+        <div class='container py-5'>
 
 
-        <div class=”row”>
-            <div class="col-6 offset-3">
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="col-6">
 
-                <div class="card" style="width: 475px;;">
-                    <img src="IMG/Profile pic.jpeg" class="square" class="card-img-top" alt="Image of Mariola Hullings">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Mariola Hullings</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of the card's content.</p>
+                    <div class="card" style="width: 475px;">
+                        <img src="IMG/Profile pic.jpeg" class="square" class="card-img-top"
+                            alt="Image of Mariola Hullings">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">Mariola Hullings</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
 
-                    </div>
-                    <div class="col-6 offset-3">
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                    <br>
-                        <div class="col-6 offset-3">
+                        </div>
+                        <div class="col text-center">
                             <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">fab fa-instagram fa-lg</a>
+                            <a href="#" class="card-link">Another link</a>
+                        </div>
+                        <br>
+                        <div class="col text-center">
+                            <a href="#" class="card-link">Card link</a>
+                            <a href="#" class="card-link">another link</a>
                             <br>
                             <br>
                         </div>
                     </div>
                 </div>
-
             </div>
+
         </div>
-    </div>
 
 
-    <script src="js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+
+        <script src="js/main.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
