change to layout

--- a/styleguide.html
+++ b/styleguide.html
@@ -14,13 +14,13 @@
 
 <body>
     <section style="background-color: #2f92bc;">
-        <div class='container py-5'>
+        <div class='container contact-card py-5'>
 
 
             <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-6">
+                <div class="col-4">
 
-                    <div class="card" style="width: 575px;">
+                    <div class="card">
                         <img src="IMG/Profile pic.jpeg" class="square;" class="card-img-top"
                             alt="Image of Mariola Hullings">
 
