--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<body>
+<body class="blogBody">
     <h1>Mariola's blog</h1>
 
     <h2>Was your first week what you expected? Why? Why not?</h2>
