--- a/styleguide.html
+++ b/styleguide.html
@@ -16,7 +16,7 @@
     <section style="background-color: #2f92bc;">
         <div class='container contact-card py-5'>
             <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-4">
+                <div class="col-md-4">
 
                     <div class="card">
                         <img src="IMG/Profile pic.jpeg" class="square;" class="card-img-top"
@@ -44,7 +44,8 @@
                             <a button type="button" class="btn btn-secondary flex-grow-1">another button</a> -->
                             <!-- </div> -->
                             <br>
-                            <div class="col text-center">
+                            <!-- <div class="col text-center"> -->
+                                <div class="text-center"> 
                                 <svg xmlns="http://www.w3.org/2000/svg" height="40" fill="currentColor"
                                     class="bi bi-envelope" viewBox="0 0 16 16">
                                     <path
@@ -55,9 +56,9 @@
                                     <path
                                         d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
                                 </svg>
-                            </div>
+                            <!-- </div> -->
                             <br>
-                            <div class="col text-center">
+                            <!-- <div class="col text-center"> -->
                                 <svg xmlns="http://www.w3.org/2000/svg" height="40" fill="currentColor"
                                     class="bi bi-instagram" viewBox="0 0 16 16">
                                     <path
@@ -68,7 +69,7 @@
                                     <path
                                         d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
                                 </svg>
-                            </div>
+                            <!-- </div> -->
                             <br>
                             <br>
                         </div>
