changes to blog

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         I’m
         excited to learn more languages and create fun things with them.
     </p>
-    <img class="picture" src="https://user-images.githubusercontent.com/123384146/214874699-d452706d-e21e-4046-9b21-07fc007d98ae.jpeg">
+    <img class="blogPic" src="https://user-images.githubusercontent.com/123384146/214874699-d452706d-e21e-4046-9b21-07fc007d98ae.jpeg" height="70px">
 
 
 
@@ -52,7 +52,7 @@
         husband at
         a bus stop in Vienna, Austria, got engaged in Fiji and married in Las Vegas!
     </p>
-    <img src="https://user-images.githubusercontent.com/123384146/214874113-1c47d2fe-ec40-41bb-b655-aca49cdad76f.jpeg">
+    <img class="blogPic" src="https://user-images.githubusercontent.com/123384146/214874113-1c47d2fe-ec40-41bb-b655-aca49cdad76f.jpeg" height="70px" >
 </body>
 
 </html>
