--- a/styleguide.html
+++ b/styleguide.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section style="background-color: #2f92bc;">
+    <section style="background-color: #043449;">
         <div class='container contact-card py-5'>
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-md-4">
