--- a/styleguide.html
+++ b/styleguide.html
@@ -31,7 +31,7 @@
 
                                     <thead>
                                         <tr>
-                                            <th><a href="href= mailto:email@gmail.com" target="_blank"><img src="images/envelope.svg" class="btnSVG" alt="Instagram Logo"></a></th>
+                                            <th><a href="https://www.google.com" target="_blank"><img src="images/envelope.svg" class="btnSVG" alt="Instagram Logo"></a></th>
                                             <th><a href="https://en.wikipedia.org/wiki/Mobile_phone" target="_blank"><img src="images/telephone.svg" class="btnSVG" alt="Github Logo"></a></th>
 
                                                 <th><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg" class="btnSVG" alt="Instagram Logo"></a></th>
