--- a/styleguide.html
+++ b/styleguide.html
@@ -14,7 +14,7 @@
 
 <body>
     <section style="background-color: #043449;">
-        <div class='container contact-card py-5'>
+        <div class='container contact-card-wrapper py-5'>
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-md-4">
 
@@ -24,7 +24,7 @@
                             alt="Image of Mariola Hullings">
 
                         <div class="card-body">
-                            <h5 class="card-title text-center">Mariola Hullings</h5>
+                            <h3 class="card-title text-center text-primary display-6"> Mariola Hullings</h3>
 
                             <div class="text-center">
                                 <table class="table table-borderless">
