--- a/styleguide.html
+++ b/styleguide.html
@@ -31,12 +31,20 @@
 
                                     <thead>
                                         <tr>
-                                            <th><a href="https://www.google.com" target="_blank"><img src="images/envelope.svg" class="btnSVG" alt="Instagram Logo"></a></th>
-                                            <th><a href="https://en.wikipedia.org/wiki/Mobile_phone" target="_blank"><img src="images/telephone.svg" class="btnSVG" alt="Github Logo"></a></th>
+                                            <th><a href="https://www.google.com" target="_blank"><img
+                                                        src="images/envelope.svg" class="btnSVG"
+                                                        alt="Instagram Logo"></a></th>
+                                            <th><a href="https://en.wikipedia.org/wiki/Mobile_phone"
+                                                    target="_blank"><img src="images/telephone.svg" class="btnSVG"
+                                                        alt="Github Logo"></a></th>
 
-                                                <th><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg" class="btnSVG" alt="Instagram Logo"></a></th>
-                                        
-                                            <th><a href="https://github.com/MariolaH" target="_blank"><img src="/images/github.svg" class="btnSVG" alt="Github Logo"></a></th>
+                                            <th><a href="https://www.instagram.com/" target="_blank"><img
+                                                        src="images/instagram.svg" class="btnSVG"
+                                                        alt="Instagram Logo"></a></th>
+
+                                            <th><a href="https://github.com/MariolaH" target="_blank"><img
+                                                        src="/images/github.svg" class="btnSVG" alt="Github Logo"></a>
+                                            </th>
                                         </tr>
 
                                     </thead>
@@ -59,4 +67,3 @@
 </body>
 
 </html>
-
