image path change

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -27,7 +27,7 @@
     <h1>My Journey</h1>
     <p>Blog by Mariola</p>
 
-    <img src="/images/Black and White profile pic.jpg" class="homePagePic"
+    <img src="/Css/blog post IMAGES/Black and White profile pic.jpg" class="homePagePic"
     alt="Image of Mariola Hullings">
 
     <div class="text-center">
