--- a/HTML/Blog.html
+++ b/HTML/Blog.html
@@ -7,20 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- css -->
-  
+
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="/Css/blog.style.css" />
+    <link rel="stylesheet" type="text/css" href="/Css/blog.style.css" />
 </head>
 
 <body class="blogBody">
     <nav>
-        <a href='/HTML/home.html'>Home</a> 
-        <a href='/HTML/Blog.html'>Blog</a> 
-        <a href='/HTML/Bio.html'>Bio</a> 
-        <a href='/HTML/Contact.html'>Contact</a>
-      </nav>
+        <div class='container'>
+
+            <div class="row d-flex justify-content-center align-items-center py-3">
+
+                <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
+
+                    <a href='/HTML/home.html'>Home</a>
+                </div>
+
+                <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
+                    <a href='/HTML/Blog.html'>Blog</a>
+                </div>
+
+                <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
+                    <a href='/HTML/Bio.html'>Bio</a>
+                </div>
+
+                <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
+                    <a href='/HTML/Contact.html'>Contact</a>
+                </div>
+
+            </div>
+        </div>
+
+    </nav>
+
 
 
 
