--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -7,39 +7,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- css -->
-  
+
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="/Css/blog.style.css" />
+    <link rel="stylesheet" type="text/css" href="/Css/blog.style.css" />
 </head>
 
 <body class="blogBody">
     <nav>
-        <a href='/HTML/home.html'>Home</a> 
-        <a href='/HTML/Blog.html'>Blog</a> 
-        <a href='/HTML/Bio.html'>Bio</a> 
-        <a href='/HTML/Contact.html'>Contact</a>
-      </nav>
+        <div class='container'>
 
-      <div class="text-center">
+            <div class="row d-flex justify-content-center align-items-center py-3">
+
+                <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
+
+                    <a href='/HTML/home.html'>Home</a>
+                </div>
+
+                <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
+                    <a href='/HTML/Blog.html'>Blog</a>
+                </div>
+
+                <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
+                    <a href='/HTML/Bio.html'>Bio</a>
+                </div>
+
+                <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
+                    <a href='/HTML/Contact.html'>Contact</a>
+                </div>
+
+            </div>
+        </div>
+
+    </nav>
+
+
+    <div class="text-center">
         <table class="table table-borderless">
 
             <thead>
                 <tr>
-                    <th><a href="https://www.google.com" target="_blank"><img
-                                src="/images/envelope.svg" class="btnSVG"
+                    <th><a href="https://www.google.com" target="_blank"><img src="/images/envelope.svg" class="btnSVG"
                                 alt="Instagram Logo"></a></th>
-                    <th><a href="https://en.wikipedia.org/wiki/Mobile_phone"
-                            target="_blank"><img src="/images/telephone.svg" class="btnSVG"
-                                alt="Github Logo"></a></th>
+                    <th><a href="https://en.wikipedia.org/wiki/Mobile_phone" target="_blank"><img
+                                src="/images/telephone.svg" class="btnSVG" alt="Github Logo"></a></th>
 
-                    <th><a href="https://www.instagram.com/" target="_blank"><img
-                                src="/images/instagram.svg" class="btnSVG"
-                                alt="Instagram Logo"></a></th>
+                    <th><a href="https://www.instagram.com/" target="_blank"><img src="/images/instagram.svg"
+                                class="btnSVG" alt="Instagram Logo"></a></th>
 
-                    <th><a href="https://github.com/MariolaH" target="_blank"><img
-                                src="/images/github.svg" class="btnSVG" alt="Github Logo"></a>
+                    <th><a href="https://github.com/MariolaH" target="_blank"><img src="/images/github.svg"
+                                class="btnSVG" alt="Github Logo"></a>
                     </th>
                 </tr>
 
@@ -49,7 +67,7 @@
 
     </div>
 
- 
+
     <script src="js/Blog.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
