--- a/HTML/home.html
+++ b/HTML/home.html
@@ -52,11 +52,6 @@
 
             <div class="col-md-6 d-flex justify-content-center align-items-center py-5">
 
-
-
-                <!-- <h1>My Journey</h1>
-    <p>Blog by Mariola</p> -->
-
                 <img src="/Css/blog post IMAGES/homepage .jpeg" class="homePagePic1" alt="Image of Mariola Hullings">
             </div>
             <div class="col-md-6 d-flex justify-content-center align-items-center py-5">
@@ -71,8 +66,7 @@
         </div>
 </section>
 
-
-    <div class='container'>
+    <!-- <div class='container'>
     
         <div class="row d-flex justify-content-center align-items-center py-3">
             
@@ -98,6 +92,7 @@
                     </div>
         </div>
     </div>
+    </div> -->
 
 
 
