--- a/HTML/home.html
+++ b/HTML/home.html
@@ -14,7 +14,7 @@
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="/Css/blog.style.css" />
 </head>
-
+<body>
 <nav>
     <div class='container'>
     
