changes to homepage

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -102,16 +102,17 @@
 
     <div class="frameBottom">
         <section>
-            <div class='containerBottom'>
+            <div class='containerBottom text-center'>
 
                 <div class="row d-flex justify-content-center align-items-center py-5">
 
                     <div class="col-md-6 d-flex justify-content-center align-items-center py-5">
 
                         <div class="cardHome">
-                            <div class="card-header">
+                            <div class="card-header CardHeader">
                                 BLOG BY MARIOLA
                             </div>
+                            <br>
                             <div class="card-body">
                                 <h5 class="card-title">Was your first week what you expected? Why? Why not?</h5>
                                 <br>
@@ -132,7 +133,7 @@
 
     <div class="frameBottom">
         <section>
-            <div class='containerBottom'>
+            <div class='containerBottom text-center'>
 
                 <div class="row d-flex justify-content-center align-items-center py-5">
 
@@ -140,9 +141,10 @@
 
 
                         <div class="cardHome">
-                            <div class="card-header">
+                            <div class="card-header CardHeader">
                                 BLOG BY MARIOLA
                             </div>
+                            <br>
                             <div class="card-body">
                                 <h5 class="card-title">What is something about you that can only be learned by reading this blog?</h5>
                                 <br>
@@ -159,7 +161,7 @@
     </div>
     <div class="frameBottom">
         <section>
-            <div class='containerBottom'>
+            <div class='containerBottom text-center'>
 
                 <div class="row d-flex justify-content-center align-items-center py-5">
 
@@ -169,6 +171,7 @@
                             <div class="card-header CardHeader">
                                 BLOG BY MARIOLA
                             </div>
+                            <br>
                             <div class="card-body">
                                 <h5 class="card-title">What does it mean to be a good developer?</h5>
                                 <br>
