--- a/HTML/home.html
+++ b/HTML/home.html
@@ -23,19 +23,19 @@
 
                 <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
 
-                    <a href='/HTML/home.html'>Home</a>
+                    <a href='/HTML/home.html'>H O M E </a>
                 </div>
 
                 <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
-                    <a href='/HTML/Blog.html'>Blog</a>
+                    <a href='/HTML/Blog.html'>B L O G</a>
                 </div>
 
                 <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
-                    <a href='/HTML/Bio.html'>Bio</a>
+                    <a href='/HTML/Bio.html'>B I O</a>
                 </div>
 
                 <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
-                    <a href='/HTML/Contact.html'>Contact</a>
+                    <a href='/HTML/Contact.html'>C O N T A C T</a>
                 </div>
 
             </div>
@@ -43,7 +43,8 @@
 
     </nav>
 
-
+<br>
+<br>
 
     <div class="frame">
         <section>
@@ -52,7 +53,7 @@
                 <div class="row d-flex justify-content-center align-items-center py-5">
 
                     <div class="col-md-4 d-flex justify-content-center align-items-center py-5">
-                        <h2>My Journey to becoming a software developer </h2>
+                        <h2>M y <br><br> J o u r n e y  <br><br> t o   <br><br> b e c o m i n g <br> <br>a <br><br> S o f t w a r e <br><br>  D e v e l o p e r </h2>
                         <br>
 
                         <!-- <img src="/Blog HTML IMG/Hompage bio.jpeg" class="homePagePic1" alt="Image of Mariola Hullings"> -->
