--- a/HTML/home.html
+++ b/HTML/home.html
@@ -52,7 +52,7 @@
 
                 <div class="row d-flex justify-content-center align-items-center py-5">
 
-                    <div class="col-md-4 d-flex justify-content-center align-items-center py-5">
+                    <div class="col-md-4 d-flex justify-content-center intro ign-items-center py-5">
                         <h2>M y <br><br> J o u r n e y  <br><br> t o   <br><br> b e c o m i n g <br> <br>a <br><br> S o f t w a r e <br><br>  D e v e l o p e r </h2>
                         <br>
 
