--- a/HTML/home.html
+++ b/HTML/home.html
@@ -21,7 +21,7 @@
 
             <div class="row d-flex justify-content-center align-items-center py-3">
 
-                <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
+                <div class="col-sm-3 d-flex justify-content-center align-items-center py-3">
 
                     <a href='/HTML/home.html'>H O M E </a>
                 </div>
@@ -52,13 +52,13 @@
 
                 <div class="row d-flex justify-content-center align-items-center py-5">
 
-                    <div class="col-md-4 d-flex justify-content-center intro ign-items-center py-5">
+                    <div class="col-sm-4 d-flex justify-content-center intro ign-items-center py-5">
                         <h2>M y <br><br> J o u r n e y  <br><br> t o   <br><br> b e c o m i n g <br> <br>a <br><br> S o f t w a r e <br><br>  D e v e l o p e r </h2>
                         <br>
 
                         <!-- <img src="/Blog HTML IMG/Hompage bio.jpeg" class="homePagePic1" alt="Image of Mariola Hullings"> -->
                     </div>
-                    <div class="col-md-4 d-flex justify-content-center align-items-center py-5">
+                    <div class="col-sm-4 d-flex justify-content-center align-items-center py-5">
 
                         <img src="/Blog HTML IMG/image on rock.jpg" class="homePagePic" alt="Image of Mariola Hullings">
 
@@ -107,7 +107,7 @@
 
                 <div class="row d-flex justify-content-center align-items-center py-5">
 
-                    <div class="col-md-6 d-flex justify-content-center align-items-center py-5">
+                    <div class="col-sm-4 d-flex justify-content-center align-items-center py-5">
 
                         <div class="cardHome">
                             <div class="card-header CardHeader">
@@ -138,7 +138,7 @@
 
                 <div class="row d-flex justify-content-center align-items-center py-5">
 
-                    <div class="col-md-6 d-flex justify-content-center align-items-center py-5">
+                    <div class="col-sm-4 d-flex justify-content-center align-items-center py-5">
 
 
                         <div class="cardHome">
@@ -166,7 +166,7 @@
 
                 <div class="row d-flex justify-content-center align-items-center py-5">
 
-                    <div class="col-md-6 d-flex justify-content-center align-items-center py-5">
+                    <div class="col-sm-4 d-flex justify-content-center align-items-center py-5">
 
                         <div class="cardHome">
                             <div class="card-header CardHeader">
