changes to text

--- a/HTML/Blog.html
+++ b/HTML/Blog.html
@@ -47,7 +47,7 @@
 
     <div class="frame">
         <br>
-        <h1>MARIOLA'S BLOG</h1>
+        <h1><b>B L O G &ensp;  B Y &ensp; M A R I O L A</b></h1>
         <section>
             <div class='containerBlog'>
                 <div class="row d-flex justify-content-center align-items-center py-3">
