--- a/HTML/home.html
+++ b/HTML/home.html
@@ -50,19 +50,20 @@
         <section>
             <div class='container'>
 
-                <div class="row d-flex justify-content-center align-items-center py-5">
-
-                    <div class="col-sm-4 d-flex justify-content-center intro ign-items-center py-5">
-                        <h2>M y <br><br> J o u r n e y  <br><br> t o   <br><br> b e c o m i n g <br> <br>a <br><br> S o f t w a r e <br><br>  D e v e l o p e r </h2>
+                <div class="row d-flex justify-content-right py-5">
+<br>
+                    <div class="col-sm-6 d-flex justify-content-center intro ign-items-center py-5">
+                        <h2><br><b>M y <br><br> J o u r n e y  <br><br> t o   <br><br> b e c o m i n g <br> <br>a <br><br> S o f t w a r e <br><br>  D e v e l o p e r </b> </h2>
                         <br>
 
                         <!-- <img src="/Blog HTML IMG/Hompage bio.jpeg" class="homePagePic1" alt="Image of Mariola Hullings"> -->
                     </div>
-                    <div class="col-sm-4 d-flex justify-content-center align-items-center py-5">
+                    <div class="col-sm-6 d-flex justify-content-left align-items-left py-5">
 
                         <img src="/Blog HTML IMG/image on rock.jpg" class="homePagePic" alt="Image of Mariola Hullings">
 
                     </div>
+                    
 
                 </div>
 
