--- a/blog-post-sprint-3.html
+++ b/blog-post-sprint-3.html
@@ -1,50 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+    crossorigin="anonymous"
+  />
+  <link rel="stylesheet" href="/Css/technical-artical.css" />
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<link rel="stylesheet" href="Css/style.css">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <section style="background-color: #043449;">
-        <div class='container contact-card-wrapper py-5'>
+  <body>
+    <section style="background-color: #043449">
+      <div class="container contact-card-wrapper py-5 vh-100">
+        <div class="row d-flex justify-content-center align-items-center">
+          <div class="col-md-6 column off-set">
+            <div class="card">
+              <h1 class="card-title text-center py-5 text-primary display-6">
+                Pseudocode?!?!?
+              </h1>
+              <img
+                src="images/frustrated.jpeg"
+                class="square profilePic card-img-top"
+                alt="Image of frustration"
+              />
+              &nbsp &nbsp
+              <h2>What is pseudocode and how does it help with programming?</h2>
+              &nbsp &nbsp
 
-            <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-md-4 column off-set">
+              <p>
+                  According, to an article written by 
+                  <a
+                    href="https://www.freecodecamp.org/news/author/ubahthebuilder/"
+                    >Kingsley Ubah</a 
+                  >
+                  on
+                <a
+                  href="https://www.freecodecamp.org/news/what-is-pseudocode-in-programming/"
+                  >freecodecamp</a
+                >
+                "Pseudocode literally means ‘fake code’. It is an informal
+                and contrived way of writing programs in which you represent the
+                sequence of actions and instructions (aka algorithms) in a form
+                that humans can easily understand."
+              </p>
+              &nbsp
+              <p>This is my process of writing pseudocode:
+                    *  </p>
 
-                    <div class=" card">
-                        <h3 class="card-title text-center py-5 text-primary display-6">Pseudocode?!?!?</h3>
-                        <img src="images/frustrated.jpeg" class="square profilePic card-img-top"
-                            alt="Image of frustration">
-
-
-
-
-
-
-
-
-
-                        <br>
-                        <br>
-
-
-                    </div>
-                </div>
+              <br />
+              <br />
             </div>
+          </div>
         </div>
+      </div>
     </section>
     <script src="js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
