--- a/blog-post-sprint-3.html
+++ b/blog-post-sprint-3.html
@@ -1,70 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-    crossorigin="anonymous"
-  />
-  <link rel="stylesheet" href="/Css/technical-artical.css" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+<link rel="stylesheet" href="/Css/technical-artical.css" />
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
 
-  <body>
+<body>
+  <div class="container contact-card-wrapper py-5 vh-100">
     <section style="background-color: #043449">
-      <div class="container contact-card-wrapper py-5 vh-100">
-        <div class="row d-flex justify-content-center align-items-center">
-          <div class="col-md-6 column off-set">
-            <div class="card">
-              <h1 class="card-title text-center py-5 text-primary display-6">
-                Pseudocode?!?!?
-              </h1>
-              <img
-                src="images/frustrated.jpeg"
-                class="square profilePic card-img-top"
-                alt="Image of frustration"
-              />
-              &nbsp &nbsp
-              <h2>What is pseudocode and how does it help with programming?</h2>
-              &nbsp &nbsp
+      <div class="row d-flex justify-content-center align-items-center">
+        <div class="col-lg-6 column off-set">
+          <div class="card">
 
-              <p>
-                  According, to an article written by 
-                  <a
-                    href="https://www.freecodecamp.org/news/author/ubahthebuilder/"
-                    >Kingsley Ubah</a 
-                  >
-                  on
-                <a
-                  href="https://www.freecodecamp.org/news/what-is-pseudocode-in-programming/"
-                  >freecodecamp</a
-                >
-                "Pseudocode literally means ‘fake code’. It is an informal
-                and contrived way of writing programs in which you represent the
-                sequence of actions and instructions (aka algorithms) in a form
-                that humans can easily understand."
-              </p>
-              &nbsp
-              <p>This is my process of writing pseudocode:
-                    *  </p>
+            <h2 class="headerTwo text-center py-5"><b>
+              What is pseudocode and how does it help with programming
+            </b></h2>
+            <br>
+            <br>
 
-              <br />
-              <br />
-            </div>
+            <img src="images/frustrated.jpeg" class="square profilePic card-img-top" alt="Image of frustration" />
+            <br>
+            <br>
+            <br>
+
+            <p class="mainParagraph">
+              According, to an article written by
+              <a href="https://www.freecodecamp.org/news/author/ubahthebuilder/">Kingsley Ubah</a>
+              on
+              <a href="https://www.freecodecamp.org/news/what-is-pseudocode-in-programming/">freecodecamp</a>
+              "Pseudocode literally means ‘fake code’. It is an informal and
+              contrived way of writing programs in which you represent the
+              sequence of actions and instructions (aka algorithms) in a form
+              that humans can easily understand."
+              <br><br>
+              Like the article said, pseudocode is just a way of translating
+              what a program should do into plain old English. You are thinking
+              about the problem at hand and writing out the steps on how to
+              solve it. <br><br>
+
+
+              When writing pseudocode I like to break it up into components:
+
+            <ul>
+
+              <li>What is the objective of this program:
+                <br>
+              <li class="example">For example: what does this program
+                need to do.</li>
+              </li>
+              <br><br>
+              <li>What variables and/or state will I need for this program:
+                <br>
+              <li class="example">For example: show location or show who’s turn it is.</li>
+              </li>
+              <br><br>
+
+              <li> What functions does the program need to performed:
+                <br>
+              <li class="example">For example: covert currencies or go from page to page.</li>
+
+              </li>
+              <br><br>
+              <li>What procedures are required for the program:
+                <br>
+              <li class="example">For example: add buttons or add a
+                counter or hide this element till something happens.</li>
+
+
+              </li>
+              <br>
+            </ul>
+
+            </p>
+            <p class="bottomParagraph">
+              Thinking about all these steps before writing code will save you time when it comes to coding and help with
+              debugging.
+            </p>
+
+            <br>
+            <br>
           </div>
         </div>
       </div>
     </section>
-    <script src="js/main.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  </div>
+  <script src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
