--- a/blog-post-sprint-3.html
+++ b/blog-post-sprint-3.html
@@ -51,25 +51,25 @@
 
               <li>What is the objective of this program:
                 <br>
-              <li class="example">For example: what does this program
+              <li class="example">For example- what does this program
                 need to do.</li>
               </li>
               <br>
               <li>What variables and/or state will I need for this program:
                 <br>
-              <li class="example">For example: show location or show who’s turn it is.</li>
+              <li class="example">For example- show location or show who’s turn it is.</li>
               </li>
               <br>
 
               <li> What functions does the program need to performed:
                 <br>
-              <li class="example">For example: covert currencies or go from page to page.</li>
+              <li class="example">For example- covert currencies or go from page to page.</li>
 
               </li>
               <br>
               <li>What procedures are required for the program:
                 <br>
-              <li class="example">For example: add buttons or add a
+              <li class="example">For example- add buttons or add a
                 counter or hide this element till something happens.</li>
 
 
@@ -79,7 +79,7 @@
 
             </p>
             <p class="bottomParagraph">
-              Thinking about all these steps before writing code will save you time when it comes to coding and help with
+              Thinking and executing all these steps before writing code will save you time when it comes to coding and help with
               debugging.
             </p>
 
