--- a/blog-post-sprint-3.html
+++ b/blog-post-sprint-3.html
@@ -19,8 +19,8 @@
           <div class="card">
 
             <h2 class="headerTwo text-center py-5"><b>
-              What is pseudocode and how does it help with programming
-            </b></h2>
+                What is pseudocode and how does it help with programming
+              </b></h2>
             <br>
             <br>
 
@@ -79,8 +79,9 @@
 
             </p>
             <p class="bottomParagraph">
-              Thinking and executing all these steps before writing code will save you time when it comes to coding and help with
-              debugging.
+              Pseudocoding the steps before writing any
+              code will save you time when it comes to coding and help with
+              debugging. 
             </p>
 
             <br>
