--- a/blog-post-sprint-3.html
+++ b/blog-post-sprint-3.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="container contact-card-wrapper py-5 vh-100">
-    <section style="background-color: #043449">
+    <section style=" background-image: linear-gradient(to bottom right, rgb(11, 11, 11), rgb(237, 236, 230), rgb(106, 104, 100));">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-lg-6 column off-set">
           <div class="card">
