--- a/HTML/Blog.html
+++ b/HTML/Blog.html
@@ -363,7 +363,7 @@
                                     about?</h4>
                                 <p class="card-text">A framework that I am interested in learning about is Angular. I
                                     would like to learn more about React and get a better understand of the library.
-                                    From some research that I have done it seems to be the most popular library and one
+                                    From some research that I have conducted it seems to be the most popular library and one
                                     that a lot of companies use.</p>
                                 <br>
                             </div>
