--- a/HTML/Blog.html
+++ b/HTML/Blog.html
@@ -363,7 +363,8 @@
                                     about?</h4>
                                 <p class="card-text">A framework that I am interested in learning about is Angular. I
                                     would like to learn more about React and get a better understand of the library.
-                                    From some research that I have conducted it seems to be the most popular library and one
+                                    From some research that I have conducted it seems to be the most popular library and
+                                    one
                                     that a lot of companies use.</p>
                                 <br>
                             </div>
@@ -380,7 +381,11 @@
                                 <br>
                                 <h4 class="card-title">Find one emerging JavaScript tool that you would like to learn
                                     more about or use in your final project.</h4>
-                                <p class="card-text"> </p>
+                                <p class="card-text"> A JavaScript tool that I would like to learn more about and
+                                    incorporate into my day to day coding is ESLint. ESLint is a debugging tool that
+                                    analyzes your code, it flags programming errors, suspicious constructs, bugs and
+                                    stylistic errors. It will be very handy while I am creating my final project.
+                                </p>
                                 <br>
                             </div>
                         </div>
