--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -41,7 +41,7 @@
 <script>var Alert = ReactBootstrap.Alert;</script>
 
 
-    <title>React App</title>
+    <title>Mariola's Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
